--- a/笔记.md
+++ b/笔记.md
@@ -4,5 +4,9 @@
 
 3、**复制图层**，选择要复制的图层之后按 `ctrl+j` ，**删除图层**，选中要删除的图层按`delete`
 
-4、**图层填充颜色**，选中图层，左侧工具栏选择前景色，选择颜色，按`alt+delete`填充
+4、**图层填充颜色**，选中图层，左侧工具栏选择***<u>前景色</u>***，选择颜色，按`alt+delete`填充，填充***<u>背景色</u>*** `ctrl+delete`
+
+5、**取消选区** `ctrl+D`，添加到选区`shift`，从选区减去`alt`，选区交叉`alt+shift`
+
+6、快速选择工具，按住`alt` 和鼠标右键不放，移动可增大和减小选区
 
